# ports

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  post-create.sh
.devcontainer/files/patches/: kernel32-volume.c.patch  kernelbase-volume.c.patch  winecfg-driveui.c.patch
.devcontainer/files/pulse/: daemon.conf
.devcontainer/vscode/: settings.json
.github/: settings.yml
docs/: NEW_PORT.md  RUNNERS.md  installers.md  new-port.md  runners.md
lib/: app_desc.py  conf.py  const.py  errors.py  guestfs.py  installer.py  unpack.py  utils.py
lib/dosbox/: __init__.py  const.py  dosbox.py  dosbox_conf.py  dosbox_dos.py  dosbox_win3x.py  dosbox_win9x.py  helpers.py  misc.py
lib/installer/: const.py  parser.py  utils.py
lib/installer/cmd/: copy.py  copy_src_cd_images.py  dosbox.py  extract.py  file.py  innoextract.py  move.py  qemu.py  replace.py  retroarch.py  scummvm.py  shell.py  template.py  wine.py
lib/qemu/: const.py  qemu.py  qemu_win9x.py  qemu_winxp.py
lib/retroarch/: retroarch.py
lib/retroarch/templates/: run.sh.tmpl
lib/scummvm/: scummvm.py
lib/scummvm/files/: scummvm.ini
lib/scummvm/templates/: run.sh.tmpl  scummvm.ini.tmpl
lib/wine/: const.py  helpers.py  wine.py
lib/wine/templates/: run.sh.tmpl
lint/: .flake8  pylintrc
ports/games/101-dalmatians-escape-from-devil-manor/: 2d39c8fc-f0f7-46bc-940e-d0a36298b25a.yaml
runners/win95/: install.sh
runners/win98/: install.sh
runners/win_3_11/: install.sh
runners/wine/: install.sh  patch.reg
runners/winxp/: install.sh
scripts/: post_all_releases.py  publish.sh  setup.sh  store.sh  upsert_releases.sh
scripts/src/: upsert_releases.py
scripts/templates/: launch.json.tmpl  release.yaml.tmpl  requests.http.tmpl
tests/: fixme_unpack.py  fixme_wine.py  test_dosbox.py  test_tmp.py
tests/data/: fdbootcd.iso
yag/: cli.py
(+1336 files in other folders)
